# aggonydb

./: Cargo.toml  README.md  TODO.txt  docker-compose.yml  pg.Dockerfile
src/: db.rs  lib.rs  main.rs  routes.rs  schema.rs
tests/: test_basic.rs
