[package]
name = "aggonydb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "postgres" ] }
actix-web = "4"
anyhow = "1.0.56"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8.2", features = ["v4"] }
log = "0.4.0"
env_logger = "0.9.0"